--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,8 @@
   "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "always",
+  "jsxBracketSameLine": true,
+  "bracketSpacing": true
 }
