--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.6.2",
     "expo": "^38.0.0",
     "expo-asset": "~8.1.7",
+    "expo-camera": "^8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.3",
