--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-safe-area-context": "3.0.2",
+    "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7"
   },
