--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-camera": "~8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
