--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-ionicons": "^4.6.5",
-    "react-native-safe-area-context": "^3.0.7",
+    "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
