--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "~1.9.0",
