--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
-    "firebase": "^7.16.0",
+    "firebase": "7.9.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
@@ -36,7 +36,9 @@
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
+    "react-redux": "^7.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
@@ -50,7 +52,8 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-native": "^3.8.1",
     "jest-expo": "^38.0.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-native-debugger-open": "^0.3.25"
   },
   "private": true
 }
