add redux to manage the user

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
+    "react-redux": "^7.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
