--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "reanimated-bottom-sheet": "^1.0.0-alpha.20"
