--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
