--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.20",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-notifications": "~0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
