--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.3",
+    "expo-notifications": "~0.3.3",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
@@ -36,6 +37,7 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-modal": "^11.5.6",
     "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
@@ -44,8 +46,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.20",
-    "redux": "^4.0.5",
-    "expo-notifications": "~0.3.3"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
