--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "firebase": "^7.16.0",
+    "moment": "^2.27.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
