--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-linear-gradient": "^8.2.1",
     "expo-linking": "^1.0.3",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
