make the datetimepicker appear according to the current theme of the ios

--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
       "useNextNotificationsApi": true
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "userInterfaceStyle": "automatic"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
