--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-appearance": "^0.3.4",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-zoom-viewer": "^3.0.1",
