--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": ["airbnb", "prettier", "prettier/react"],
+  "parser": "babel-eslint",
   "rules": {
     "react-native/no-unused-styles": 2,
     "react-native/no-color-literals": 2,
