--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.6.2",
+    "babel-eslint": "^10.1.0",
     "expo": "^38.0.4",
     "expo-asset": "~8.1.7",
     "expo-camera": "~8.3.1",
