--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-appearance": "^0.3.4",
     "react-native-elements": "^2.0.4",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-ionicons": "^4.6.5",
@@ -45,12 +46,12 @@
     "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.20",
     "redux": "^4.0.5",
-    "react-native-svg": "12.1.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
