--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal": "^11.5.6",
     "react-native-modal-datetime-picker": "^8.7.1",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
