gave input field a colour simple fox :)

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Pflanzy",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/pflanzy.png",
     "scheme": "myapp",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -14,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "android": {
       "useNextNotificationsApi": true
     },
