--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-image-manipulator": "^8.2.1",
     "expo-image-picker": "^8.4.0",
     "expo-linear-gradient": "^8.2.1",
     "expo-linking": "^1.0.3",
